# fuzhouhua

./: .gitignore  README.md  pyproject.toml  ruff.toml
configs/: ocr_config.json  playlist.json  subtitle_xy.json  whisper-large-v3_config.json  whisper-small_config.json  whisper_config.json
scripts/: download_videos.py  make_releases.sh  preview_dataset.py  subtitle_config_generator.py
src/data_processing/: clip_extractor.py  dataset_builder.py  dataset_uploader.py  ocr_extractor.py  srt_checker.py  srt_generator.py
src/metrics/wer/: wer.py
src/models/: dataset.py  train.py
tests/: test_bert_model.py  test_metrics.py  test_ppocr.py  test_transcribe.py
