[project]
name = "fuzhouhua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.23.1",
    "onnxruntime>=1.21.0",
    "openai>=1.69.0",
    "opencv-python>=4.11.0.86",
    "paddle2onnx==1.3.1",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
    "pytubefix>=8.12.2",
    "scikit-image>=0.25.2",
    "srt>=3.5.3",
    "tqdm>=4.67.1",
]
